Fix MDEV-12973: Blank columns querying SQL Server Added support of NCHAR, NVARCHAR an ROWID JDBC types.   modified:   storage/connect/jdbconn.cpp